# neuView

./: .env.example  .gitignore  BALANCE_INDEX_ENHANCEMENT.md  CACHE_MANIFEST_REFACTORING_SUMMARY.md  CACHE_MIGRATION_SUMMARY.md  CACHE_OPTIMIZATION.md  CELL_COUNT_FILTER_IMPLEMENTATION.md  CENTRAL_BRAIN_CONSOLIDATION.md  CHECKBOX_STATE_REFACTOR.md  CLASS_EXTRACTION_SUMMARY.md  CLICK_NAVIGATION_TEST.md  CLI_OPTIONS.md  COLORUTILS_CONSOLIDATION_SUMMARY.md  COLOR_MAPPING_CONSOLIDATION_SUMMARY.md  COLOR_SYSTEM_MODERNIZATION_COMPLETE.md  COLUMN_ANALYSIS_FEATURE.md  COLUMN_ROI_IMPLEMENTATION_SUMMARY.md  COMBINED_PAGE_FIX_SUMMARY.md  COMPLETE_COMBINATION_SOLUTION.md  CONNECTIVITY_COMBINATION_SOLUTION.md  DATA_PROCESSING_MODERNIZATION_SUMMARY.md  DATA_PROCESSING_PIPELINE_FIX_SUMMARY.md  DEPRECATED_STRATEGIES_CLEANUP_SUMMARY.md  DEPRECATION_GUIDE.md  DEVELOPMENT.md  DIRECTORY_CLEANUP_SUMMARY.md  DIRECTORY_STRUCTURE_CHANGES.md  DUPLICATE_NAME_FIX.md  FAFB_ADAPTER_FIXES.md  FAFB_POSITION_FIX_SUMMARY.md  FAFB_ROI_CHECKBOX_FIX_SUMMARY.md  FAFB_SOMA_SIDE_CHANGES_SUMMARY.md  HELP_PAGE_IMPLEMENTATION.md  HEXAGON_DISPLAY_CHANGES.md  HEXAGON_GENERATOR_USAGE.md  HEXAGON_GRID_REFACTOR_SUMMARY.md  HEXAGON_REFACTORING_STATUS.md  HTML_TOOLTIP_USAGE.md  HTML_WHITESPACE_REDUCTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  (+109 more)
.github/ISSUE_TEMPLATE/: feedback.yml
.github/workflows/: README.md  ci.yml  test.yml
config/: config.cns.yaml  config.example.yaml  config.fafb.yaml  config.optic-lobe.yaml
docs/: FAFB_SOMA_SIDE_FIXES.md  FAFB_TEMPLATE_SELECTION.md  IMPLEMENTATION_VERIFICATION.md  dataset_adapters.md  developer-guide.md  neuron_type.md  roi_integration_guide.md  user-guide.md
docs/development-notes/: CENTRAL_BRAIN_CONSOLIDATION.md  CLI_OPTIONS.md  COLUMN_ANALYSIS_FEATURE.md  COLUMN_ROI_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_HEXAGON_GRIDS.md  COMPREHENSIVE_HEXAGON_IMPLEMENTATION_SUMMARY.md  CORRECTED_ALGORITHM_SUMMARY.md  DDD_CLEANUP_SUMMARY.md  DDD_IMPROVEMENTS.md  FIXES_IMPLEMENTED.md  HEXAGON_GENERATOR_USAGE.md  HEXAGON_GRID_REFACTOR_SUMMARY.md  LAYER_ANALYSIS_CONTAINER_RESTRUCTURE.md  MIGRATION.md  PIL_TO_CAIRO_MIGRATION.md  PROJECT_SUMMARY.md  REGION_ORDERING_IMPLEMENTATION.md  ROI_EXCLUSIONS.md  ROI_FILTERING_IMPLEMENTATION.md  SVG_FILE_INTEGRATION_SUMMARY.md  TEMPLATE_CONSOLIDATION.md
docs/fixes/: CLICK_HANDLER_FIX_SUMMARY.md  DUPLICATE_NAME_FIX.md  HIGHLIGHTING_FIX_SUMMARY.md  INDEPENDENT_INPUTS_FIX.md
docs/implementation/: CLICKABLE_SOMA_SIDES_IMPLEMENTATION.md  NEUROGLANCER_SOMA_SIDE_SELECTION.md  NEURON_SEARCH_IMPLEMENTATION.md  SYNONYM_FLYWIRE_TAG_FILTERING.md
docs/optimization/: CACHE_MIGRATION_SUMMARY.md  OPTIMIZATION_IMPLEMENTATION_RESULTS.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  SINGLE_QUERY_PROFILER_USAGE.md
docs/refactoring/: PHASE1_COMPLETE.md  PHASE6_PERFORMANCE_COMPLETE.md  SYNONYM_FLYWIRE_PROCESSING_REFACTORING.md  phase1-extraction-summary.md
examples/: dataset_adapter_example.py  example_hexagon_usage.py  example_roi_queries.py  example_svg_file_integration.py  neuron_type_example.py  phase1_demo.py  phase6_performance_demo.py  refactored_strategies_demo.py
input/: README.md  brainregions.csv  citations.csv  youtube.csv
output/: LPLC2_neuron_data.json
performance/: README.md
performance/analysis/: test_syn_diff_in_columns.ipynb
performance/data/: detailed_pop_performance_report.json  pop_performance_analysis.json  pop_performance_report.json
performance/reports/: OPTIMIZATION_IMPLEMENTATION_COMPLETE.md  QUICKPAGE_POP_PERFORMANCE_OPTIMIZATION_REPORT.md  SOMA_CACHE_OPTIMIZATION_REPORT.md
performance/scripts/: analyze_pop_performance.py  performance_comparison.py  profile_bulk_generation.py  profile_pop_command.py  profile_pop_detailed.py  profile_realistic_bulk.py  profile_soma_cache.py  single_query_profiler.py
scripts/: README.md  cleanup_redundant_cache.py  extract_and_fill.py  increment_version.py  investigate_consistency.py  optimization_implementation.py  realistic_bulk_test.py  test_optimization.py  verify_optimization.py
src/neuview/: __init__.py  __main__.py  cache.py  cli.py  commands.py  config.py  core_services.py  dataset_adapters.py  managers.py  neuprint_connector.py  page_generator.py
src/quickpage/: __init__.py  __main__.py  cache.py  cli.py  cli_new.py  commands.py  config.py  core_services.py  dataset_adapters.py  json_generator.py  managers.py  models.py  neuprint_connector.py  neuron_type.py  optimized_index_service.py  page_generator.py  query_optimizations.py  result.py  services.py  test-math.ipynb
static/css/: neuron-page.css
static/js/: neuron-page.js  (+4 more)
templates/: CUMULATIVE_FIX.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETED.md  README.md  README_template.md.jinja  SLIDER_FIX.md  USAGE_EXAMPLE.md  base.html  base.html.jinja  eyemap.svg.jinja  help.html  help.html.jinja  index.html  index.html.jinja  index_page.html  macros.html  macros.html.jinja  neuroglancer-fafb.js.jinja  neuroglancer.js.jinja  neuron-page.js.jinja  neuron_page.html  neuron_page.html.jinja  scatterplot.svg.jinja  test_page.html  types.html  types.html.jinja  validation_comparison.md
test/: Dm4_optimized.cypher  __init__.py  single_query_profiler.py  test_abbr_tooltips.html  test_all_dataset_layers.py  test_ame_la_inclusion.py  test_central_brain_consolidation.py  test_citation_service_integration.py  test_column_existence_logic.py  test_compare_roi_extraction_methods.py  test_comprehensive_hexagon_grids.py  test_coordinate_system.py  test_data_processing_modernization.py  test_dataset_adapters.py  test_diff_syn_num_layertbl_to_npost.ipynb  test_layer_analysis_requirements.py  test_male_cns_integration.py  test_neuroglancer_selection.py  test_page_generator_integration.py  test_pvlp_layer_analysis.py  test_roi_exclusions.py  test_scatter.py  test_scatterplot_service.py  test_soma_side.py  test_soma_side_flip.py  test_syn_diff_in_columns.ipynb  test_tm3_neuron_type.py  test_tm3_simple.py  test_tm3_visual_example.py  test_undefined_tag.py
test_fafb_roi_fix/: test_roi_checkbox_fix.py
utils/: check_available_types.py
(+290 files in other folders)
