[project]
authors = [{ name = "Frank Loesche", email = "loeschef@janelia.hhmi.org" }]
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "neuprint-python>=0.4.0",
    "toml>=0.10.0",
    "python-dotenv>=1.0.0",
    "pycairo>=1.20.0",
    "cairosvg>=2.5.0",
]
name = "quickpage"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
quickpage = "quickpage.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.11"
click = "*"
jinja2 = "*"
pyyaml = "*"
requests = "*"
pandas = "*"
toml = "*"
pip = "*"
python-dotenv = "*"

pycairo = "*"
cairosvg = "*"
parallel = ">=20200322,<20250623"

[tool.pixi.pypi-dependencies]
quickpage = { path = ".", editable = true }

[tool.pixi.tasks]
clean-output = "rm -rf output/"
pop-all = "yes pop | head -n $(find output/.queue -name '*yaml' | wc -l) | parallel quickpage"
dev = "python -m quickpage --help"
setup-env = "cp .env.example .env && echo 'Created .env file. Please edit it and add your NEUPRINT_TOKEN.'"

[tool.pixi.tasks.fill-cns-type]
args = [{ arg = "cns_type", default = "" }]
cmd = "quickpage -c config.cns.yaml fill-queue{{ ' -n ' ~ cns_type if cns_type != '' else '' }}"

[tool.pixi.tasks.create-index-cns]
cmd = "quickpage -c config.cns.yaml create-index"

[tool.pixi.tasks.test-cns]
depends-on = [
{ task = "clean-output"},
{ task = "fill-cns-type", args = ["SAD103"] },
{ task = "fill-cns-type", args = ["Tm3"] },
{ task = "fill-cns-type", args = ["AOTU019"] },
{ task = "fill-cns-type", args = [""] },
{ task = "pop-all"},
{ task = "create-index-cns"}
]
